--- a/htmls/download.html
+++ b/htmls/download.html
@@ -84,7 +84,7 @@
 
 <body>
   <div class="text-center">
-    <img src="download.svg" class="img-fluid img-responsive" style="height: 200px;">
+    <!-- <img src="download.svg" class="img-fluid img-responsive" style="height: 200px;"> -->
   </div>
 
   <div class="card mt-5">
