--- a/htmls/home.html
+++ b/htmls/home.html
@@ -1,4 +1,5 @@
-<!-- {% load static %} -->
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,7 +10,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://unpkg.com/filepond/dist/filepond.css" rel="stylesheet">
-    <link href="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.css" rel="stylesheet">
+    <link href="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.css"
+        rel="stylesheet">
 
     <style>
         /**
@@ -81,7 +83,7 @@
         }
 
         .header-image {
-            height: 150px; 
+            height: 150px;
             margin-bottom: 1rem;
         }
     </style>
@@ -89,10 +91,11 @@
 
 <body>
     <div class="text-center">
-        <img src="undraw.svg" class="img-fluid img-responsive header-image" alt="Illustration of files being organized">
+        <img src="undraw.svg" class="img-fluid img-responsive header-image"
+            alt="Illustration of files being organized">
     </div>
 
-    <input type="file" class="my-pond mt-4" name="filepond" aria-label="File uploader"/>
+    <input type="file" class="my-pond mt-4" name="filepond" aria-label="File uploader" />
 
     <div class="text-center">
         <button class="btn btn-success" onclick="upload_file()">Upload File</button>
@@ -117,27 +120,27 @@
     <script src="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.js"></script>
 
     <script>
-        // Register FilePond plugins
-        FilePond.registerPlugin(FilePondPluginImagePreview);
-
-        // Turn all file input elements into ponds
-        FilePond.create(document.querySelector('.my-pond'));
-
+        // This function is called by your 'Upload File' button
         function upload_file() {
+            // Find the FilePond instance on the page
             const pond = FilePond.find(document.querySelector('.my-pond'));
+
+            // Get the files that have been added
             const files = pond.getFiles();
 
             if (files.length > 0) {
                 console.log(`Uploading ${files.length} file(s).`);
                 files.forEach(fileItem => {
                     console.log(fileItem.file.name);
-                    // Implement the actual file upload logic here
+                    // **TODO**: Implement your actual file upload logic here.
                 });
             } else {
                 console.log('No files selected');
+                alert('Please select a file to upload first!');
             }
         }
 
+        // This function is called by your 'copy URL' button
         function copy_url() {
             const url = window.location.href;
             navigator.clipboard.writeText(url).then(() => {
@@ -147,14 +150,20 @@
             });
         }
 
+        // Use jQuery's document ready function to set up FilePond
         $(function () {
+            // Register the image preview plugin with the jQuery adapter
             $.fn.filepond.registerPlugin(FilePondPluginImagePreview);
+            
+            // Initialize FilePond on our input element
             $('.my-pond').filepond({
                 allowMultiple: true,
-                name: 'filepond' 
+                name: 'filepond' // Important for backend processing
             });
+            
+            // Optional: You can listen for events like this
             $('.my-pond').on('FilePond:addfile', function (e) {
-                console.log('file added event', e);
+                console.log('A file was added', e);
             });
         });
     </script>
